git pod에 맞춰 수정

--- a/order/src/main/resources/templates/checkout.html
+++ b/order/src/main/resources/templates/checkout.html
@@ -42,13 +42,13 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="active">
-					<a href="http://product.jaceshim.com:30001/products?type=createProduct">상품등록</a>
+					<a href="https://30001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/products?type=createProduct">상품등록</a>
 				</li>
 				<li>
-					<a href="http://product.jaceshim.com:30001/products">상품목록</a>
+					<a href="https://30001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/products">상품목록</a>
 				</li>
 				<li>
-					<a href="http://member.jaceshim.com:10001/products">마이페이지</a>
+					<a href="https://10001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/products">마이페이지</a>
 				</li>
 			</ul>
 		</div>
@@ -251,7 +251,7 @@
 					type: 'POST',
 					success: function (data) {
 						alert("주문완료 되었습니다");
-						document.location.href = "http://member.jaceshim.com:10001/mypage";
+						document.location.href = "https://10001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/mypage";
 					},
 					error: function (jqXHR, textStatus, errorThrown) {
 						alert(textStatus);
