--- a/product/src/main/resources/templates/products.html
+++ b/product/src/main/resources/templates/products.html
@@ -33,17 +33,17 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="http://product.jaceshim.com:30001/products?type=createProduct">상품등록</a>
+					<a href="https://30001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/products?type=createProduct">상품등록</a>
 				</li>
 				<li class="active">
-					<a href="http://product.jaceshim.com:30001/products">상품목록</a>
+					<a href="https://30001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/products">상품목록</a>
 				</li>
 				<li>
-					<a href="http://member.jaceshim.com:10001/mypage">마이페이지</a>
+					<a href="https://10001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/mypage">마이페이지</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="http://member.jaceshim.com:10001/logout">로그아웃</a></li>
+				<li><a href="https://10001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/logout">로그아웃</a></li>
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
@@ -202,7 +202,7 @@
 				orderLines += productId+":"+quantity + ",";
 			});
 
-			document.location.href = "http://order.jaceshim.com:20001/checkout?checkoutItems[]=" + orderLines;
+			document.location.href = "https://20001-hyan486-springcamp2017-pzo9qwx5gtz.ws-us47.gitpod.io/checkout?checkoutItems[]=" + orderLines;
 
 		});
 
